修改建議重補修名單的補修判斷，採用學生有成績的年級與課程規劃表比對，而不是學生目前的年級。

--- a/SHSchool.Retake.csproj
+++ b/SHSchool.Retake.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{5786107C-67FD-4905-B667-A5E94F7ED50A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>K12.Retake.Shinmin</RootNamespace>
+    <RootNamespace>SHSchool.Retake</RootNamespace>
     <AssemblyName>SHSchool.Retake</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -75,6 +75,7 @@
     <Reference Include="DevComponents.DotNetBar2, Version=9.5.0.1, Culture=neutral, PublicKeyToken=7eb7c3a35b91de04, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>Library\DevComponents.DotNetBar2.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="FISCA, Version=2.1.3.12, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
