2016/12/19 穎驊接手恩正 [H03-02][08] 重補修2.0-學生選課分發功能  項目，續作完成  手動指定重補修課程 、未分發是由、介面排序、Filter 功能

--- a/SHSchool.Retake.csproj
+++ b/SHSchool.Retake.csproj
@@ -292,6 +292,18 @@
     <Compile Include="Form\GradingProjectConfigForm.Designer.cs">
       <DependentUpon>GradingProjectConfigForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form\ModifyRecord2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form\ModifyRecord2.Designer.cs">
+      <DependentUpon>ModifyRecord2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form\ModifyRecord.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form\ModifyRecord.Designer.cs">
+      <DependentUpon>ModifyRecord.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form\RetakeResultsInputForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -523,6 +535,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form\GradingProjectConfigForm.resx">
       <DependentUpon>GradingProjectConfigForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form\ModifyRecord2.resx">
+      <DependentUpon>ModifyRecord2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form\ModifyRecord.resx">
+      <DependentUpon>ModifyRecord.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\RetakeResultsInputForm.resx">
       <DependentUpon>RetakeResultsInputForm.cs</DependentUpon>
